--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   class="avatar-image-605"
                   loading="lazy"
                   alt=""
-                  src="./public/avatar--image60@2x.png"
+                  src="./public/avatar--image601@2x.png"
                 />
               </div>
               <div class="avatar-image-60-container">
